Fixed white backgound not showing in some browsers

--- a/app/style/navigation.css
+++ b/app/style/navigation.css
@@ -72,6 +72,10 @@ footer ul li {
     height: 100%;
     text-align: center;
   }
+  nav.enabled {
+    height: 100%;
+    text-align: center;
+  }
   nav img.enabled {
     margin: 20px;
     display: block;
